# ShrFlow-V1

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  HANDOVER.md  README.md  docker-compose.yml  docs.json  pyproject.toml  rahul.tex
docs/: README.md  VISUAL_GALLERY.md  _404.md  _sidebar.md  docker_notes.md  docs.json  index.html  introduction.md  introduction.mdx  mint.json
migrations/: 002_progressive_onboarding.sql  003_add_bounce_reason.sql  006_phase4_campaign_orchestration.sql  007_phase7_plans_enforcement.sql  008_phase75_concurrency_guards.sql  009_phase75_background_jobs.sql  010_cascade_delete_user.sql  022_phase2_contacts_alignment.sql  023_contacts_email_domain.sql  024_onboarding_field_extensions.sql  025_campaign_runtime_alignment.sql  029_user_theme_preference.sql  031_immutable_audit_logs.sql  032_jwt_refresh_tokens.sql  033_phase6_email_events.sql  035_rls_tenant_isolation.sql  036_phase8_franchise_workspaces.sql  037_workspace_requests.sql  038_invited_by_tracking.sql  039_drop_tenants_email_unique.sql  040_audit_logs_rbac.sql  041_add_missing_tenant_columns.sql  042_import_jobs_tenant_isolation.sql  043_pricing_v2_final.sql  044_invite_status_expiry.sql  045_audit_logs_source.sql  045_merge_member_into_creator.sql  046_align_email_tasks.sql  047_email_tasks_hardening.sql  048_elite_delivery_schema.sql  050_account_workspace_deletion_system.sql  051_add_user_token_version.sql  052_add_full_name_to_contacts.sql  053_franchise_requests.sql  054_add_missing_updated_at.sql  055_handover_alignment.sql  056_bounce_details.sql  (+8 more)
(+354 files in other folders)
