[project]
name = "shrflow_platform"
version = "0.1.0"
description = "ShrFlow Email Engine Platform"
requires-python = ">=3.11"

[tool.ruff]
# Set the maximum line length to 88.
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "node_modules",
    "deploy",
    "migrations",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
extraPaths = ["platform/api"]
